feat: responsive header

--- a/asset/style/home-page-v2.css
+++ b/asset/style/home-page-v2.css
@@ -8,49 +8,43 @@
 @font-face {
     font-family: 'WorkSansSemiBold';
     src: url(../font/Work-Sans/WorkSans-SemiBold.ttf);
-
 }
 
 @font-face {
     font-family: 'WorkSansMedium';
     src: url(../font/Work-Sans/WorkSans-Medium.ttf);
-
 }
 
 @font-face {
     font-family: 'WorkSansRegular';
     src: url(../font/Work-Sans/WorkSans-Regular.ttf);
-
 }
 
 
 /*Font Plus Jakarta Sans*/
+
 @font-face {
     font-family: 'PlusJakartaSansRegular';
     src: url(../font/Plus-Jakarta-Sans/PlusJakartaSans-Regular.ttf);
-
 }
 
 @font-face {
     font-family: 'PlusJakartaSansSemiBold';
     src: url(../font/Plus-Jakarta-Sans/PlusJakartaSans-SemiBold.ttf);
-
 }
 
 @font-face {
     font-family: 'PlusJakartaSansExtraBold';
     src: url(../font/Plus-Jakarta-Sans/PlusJakartaSans-ExtraBold.ttf);
-
 }
+
 
 /*Font Inter*/
 
 @font-face {
     font-family: 'InterRegular';
     src: url(../font/Inter/Inter-Regular.ttf);
-
 }
-
 
 :root {
     --var-sz: 24px;
@@ -85,59 +79,64 @@
 }
 
 
-img{
-	max-width: 100%;
-	height: auto;
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
 }
 
-.container{
-	width: 1218px;
-	margin: 0 auto;
+.container {
+    width: 1218px;
+    margin: 0 auto;
 }
 
-header{
-	padding: 32px 0;
-	font-family: var(--font-WorkSansRegular);
-	color: var(--secondary-600);
+header {
+    padding: 32px 0;
+    font-family: var(--font-WorkSansRegular);
+    color: var(--secondary-600);
 }
 
-header nav{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+header nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-header nav .logo img{
-	max-width: 100%;
-	height: auto;
+header nav .logo img, header nav .logo-mobile img {
+    max-width: 100%;
+    height: auto;
 }
 
+header nav .logo-mobile{
+    display: none;
+}
 
-header nav ul li{
-	float: left;
-	margin-right: 32px;
+header nav ul li {
+    float: left;
+    margin-right: 32px;
     list-style: none;
-	
 }
 
-header nav ul li a{
-	color: var(--secondary-600);
-	text-decoration: none;
-	font-family: var(--font-WorkSansRegular);
-	font-size: var(--font-16);
+header nav ul li a {
+    color: var(--secondary-600);
+    text-decoration: none;
+    font-family: var(--font-WorkSansRegular);
+    font-size: var(--font-16);
 }
 
-header nav form{
-	width: 20%;
-	display: flex;
-	align-items: center;
-	justify-content: end;
+header nav form {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
 }
-header nav .search-input{
-	display: flex;
+
+header nav .search-input {
+    display: flex;
 }
-header nav .search-input input{
-	padding: 8px 16px;
+
+header nav .search-input input {
+    padding: 8px 16px;
     border: 0px;
     font-size: 14px;
     font-family: var(--font-InterRegular);
@@ -146,17 +145,17 @@ header nav .search-input input{
     border-top-left-radius: 5px;
 }
 
-header nav .search-input input::placeholder{
-	color: var(--secondary-400);
+header nav .search-input input::placeholder {
+    color: var(--secondary-400);
 }
 
 header nav .search-input button,
-header nav .search-input input{
-	background-color: var(--secondary-100);
+header nav .search-input input {
+    background-color: var(--secondary-100);
 }
 
-header nav .search-input button{
-	padding: 8px 10px 8px 12px;
+header nav .search-input button {
+    padding: 8px 10px 8px 12px;
     font-size: 16px;
     border: 0px;
     border-bottom-right-radius: 5px;
@@ -164,20 +163,19 @@ header nav .search-input button{
     cursor: pointer;
 }
 
-header nav .mobile-btn{
-	display: none;
+header nav .mobile-btn {
+    display: none;
 }
 
-header nav form .dark-mode-selector{
-	position: relative;
-	margin: 0;
-	margin-left: 40px;
-	display: flex;
+header nav form .dark-mode-selector {
+    position: relative;
+    margin: 0;
+    margin-left: 40px;
+    display: flex;
 }
 
-
-header nav form .dark-mode-selector input{
-	width: 48px;
+header nav form .dark-mode-selector input {
+    width: 48px;
     height: 28px;
     appearance: none;
     background-color: var(--secondary-200);
@@ -201,25 +199,21 @@ header nav form .dark-mode-selector input::before {
     border-radius: 50%;
 }
 
-header nav form .dark-mode-selector input:checked{
-	background-color: var(--var-primary);
+header nav form .dark-mode-selector input:checked {
+    background-color: var(--var-primary);
 }
 
 header nav form .dark-mode-selector input:checked+img {
     left: 27px;
-
 }
 
 header nav form .dark-mode-selector input:checked:before {
     left: 22px;
 }
 
-
-
-header nav form .dark-mode-selector img{
+header nav form .dark-mode-selector img {
     position: absolute;
     top: 7px;
     left: 8px;
     cursor: pointer;
 }
-
