--- a/asset/style/home-page.css
+++ b/asset/style/home-page.css
@@ -218,7 +218,8 @@ header form {
     color: #52525b;
     border-radius: 2px;
     position: absolute;
-    right: 24px;
+    right: 23px;
+    bottom: 23px;
     cursor: pointer;
     border: none;
     outline: none;
